intTests/test_type_errors/err019.log.good
Loading file "err019.saw"
Type errors:
  err019.saw:5:11-5:12: Error: Type mismatch.
    Expected: (Int, Int, Int, Int)
    Found:    (Int, Int, Int)

  err019.saw:4:12-4:32: Note: The type (Int, Int, Int, Int) arises from this type annotation
  err019.saw:3:9-3:18: Note: The type (Int, Int, Int) arises from the type of this term


FAILED
