intTests/test_type_errors/err019.saw
// Trigger the message we get by unifying tuples of mismatched arity.

let x = (1, 2, 3);
let f (x: (Int, Int, Int, Int)) = x.0;
let y = f x;
